syntax = "proto3";

package paging;

option go_package = "github.com/ml444/gkit/dbx/paging;paging";

// Classic paging mode. Use "Page" and "Size" for paging.
message Paginate {
    // @desc: current page
    uint32 page = 1;
    // @desc: page size
    uint32 size = 2;
    // @desc: total number of data
    int64 total = 3;
    // @desc: When SkipCount is true,
    // even if CurrentPage is equal to 1, don't count the total.
    bool skip_count = 4;
}

// Scroll: mode. Do not count the total, Use "Size" and "NextToken" for paging.
//      through the "NextToken" keep getting the next page until the data is finished.
message Scroll {
    // @desc: page size
    uint32 size = 1;
    // @desc: next page token
    string token = 2;
    // @desc: token expire time
    int64 expire = 3;
}

